Eliminar Clase gotoans

--- a/preguntas-frecuentes/como-comprar/como-comprar.html
+++ b/preguntas-frecuentes/como-comprar/como-comprar.html
@@ -4,7 +4,7 @@
     <div class="interior">
       <h3>¿Cómo Comprar?</h3>
       <p><strong>¿Eres cliente nuevo?</strong></p>
-      <p>Si aún no has comprado por Paris.cl te invitamos a conocer algunos de los beneficios que tenemos para ti:</p>
+      <p>Si aún no has comprado en nuestro sitio te invitamos a conocer algunos de los beneficios que tenemos para ti:</p>
       <ul>
         <li>Compra rápido sin tener que registrarte.</li>
         <li>Acceso a descuentos exclusivos.</li>
@@ -25,14 +25,7 @@
     </div>
   </div>
 </section>
-<section class="gotoans">
-  <div class="container">
-    <div class="right flex-container">
-      <h3>Te sirvió esta información</h3>
-      <a href="#">SI</a> <a href="#">NO</a>
-    </div>
-  </div>
-</section>
+
 
 <!-- {breadcrumbs:[
 {title: "Preguntas Frecuentes", url: "preguntas-frecuentes"},
