Cambio Texto GiftCard

--- a/preguntas-frecuentes/como-comprar/puedo-pedir-factura.html
+++ b/preguntas-frecuentes/como-comprar/puedo-pedir-factura.html
@@ -4,7 +4,7 @@
       <h3>¿Puedo pedir factura?</h3>
       <p>Sí, durante el proceso de compra podrás seleccionar la opción Factura.</p>
       <p>La factura es Electrónica, esta será enviada al correo electrónico que indiques en la Orden de Compra.</p>
-      <p><small>Nota: Esta opción no está disponible para productos de regalos de Novios o Bebés o pagando con Giftcard.</small></p>
+      <p><small>Nota: Esta opción no está disponible para productos de regalos de Novios o Bebés o pagando con Gift Card.</small></p>
     </div>
   </div>
 </section>
