--- a/despacho.html
+++ b/despacho.html
@@ -17,19 +17,18 @@
       <a class="item internal-link" href="/sac/contacto/tiendas">
         <h4>Información de Tiendas</h4>
         <p>
-          Ubica tu tienda favorita seleccionando la región en la que
-          quieres efectuar tu compra.
+			Si deseas conocer información de las tiendas, 
+			la dirección y los teléfonos de contacto, puedes revisarlo acá
         </p>
         <h5>
           Descubre tu tienda aquí<span class="icon-arrow-right" />
         </h5>
       </a>
-      <a class="item internal-link red">
-        <h4>Cancelación de Orden</h4>
+      <a class="item internal-link" href="/sac/contacto/formulario-contacto">
+        <h4>Anular Compra</h4>
         <p>
-          Si deseas cancelar tu orden puedes ingresar a Cancelación de
-          Orden para gestionar la devolución de tu dinaro y la
-          anulación de tu compra.
+          Si deseas cancelar o reagendar tu compra puedes ingresar a nuestro
+		  Formulario de contacto para poder revisar tu requerimiento
         </p>
         <h5>
           cancela tu orden aquí<span class="icon-arrow-right" />
@@ -43,47 +42,45 @@
     <h3>Preguntas Frecuentes</h3>
     <div class="flex-container flex-start">
       <div class="tab">
-        <button class="tablinks active">Tipos de despacho</button>
-        <button class="tablinks">Retirar en tienda</button>
-        <button class="tablinks">Costos de envío</button>
+        <button class="tablinks active">¿Qué puedo hacer si mi producto no llego en la fecha que correspondía?</button>
+        <button class="tablinks">¿Cuánto tiempo tengo para cambiar o devolver mi producto?</button>
+        <button class="tablinks">¿Cuánto tiempo tengo para retirar mi producto en tienda?</button>
       </div>
       <div class="tabcontent-container">
         <div class="tabcontent visible">
           <button class="accordion">
-            Tipos de despacho<span class="icon-plus" />
+            ¿Qué puedo hacer si mi producto no llego en la fecha que correspondía?<span class="icon-plus" />
           </button>
           <div class="tabcontent__expadning-container">
-            <h4>Tipos y métodos de despacho</h4>
+            <h4>Seguimiento de compra</h4>
             <p>
-              En Paris.cl puedes obtener tus productos por medio de
-              despacho a domicilio o retiro en tienda.
-            </p>
-            <h4>Despacho a domicilio</h4>
-            <p>
-              Los despachos a domicilio se realizan de lunes a sábado.
-              Los domingos y festivos no se consideran para el plazo
-              de entrega, retomándose el día hábil siguiente.
+			Revisa el estado de tu despacho en la opción de seguimiento de tu compra, 
+			o puedes completar una solicitud de reagendamiento en el siguiente vínculo 
+			<a href="/sac/contacto/formulario-contacto" target="_blank">REAGENDAR</a>, si necesitas mayor información puedes comunicarte con nosotros al 600 400 8000</p>
             </p>
           </div>
         </div>
         <div class="tabcontent">
           <button class="accordion">
-            Retirar en tienda<span class="icon-plus" />
+            ¿Cuánto tiempo tengo para cambiar o devolver mi producto?<span class="icon-plus" />
           </button>
           <div class="tabcontent__expadning-container">
-            <h4>Retiro en Tienda</h4>
-            <p>Retira en Tienda de forma segura...</p>
+            <h4>Cambios y Devoluciones</h4>
+            <p>Para los cambios tienes 30 días desde la fecha de compra o recepción del producto 
+			y 10 días para realizar la devolución. Debes presentar la boleta, el producto debe estar sin uso, 
+			con etiqueta adherida, en su embalaje original, sellado y con sus accesorios. Recuerda revisar 
+			tu producto al momento de su entrega.</p>
           </div>
         </div>
         <div class="tabcontent">
           <button class="accordion">
-            Costos de envío<span class="icon-plus" />
+            ¿Cuánto tiempo tengo para retirar mi producto en tienda?<span class="icon-plus" />
           </button>
           <div class="tabcontent__expadning-container">
-            <h4>Costo de Envío</h4>
+            <h4>Plazo de Retiro</h4>
             <p>
-              Toda compra realizada en Paris.cl posee un costo
-              asociado
+			tienes 3 días a partir de la fecha que recibiste tu mail de retiro, 
+			si no retiras tú producto en este plazo tu compra podria ser anulada.	
             </p>
           </div>
         </div>
