--- a/mis-datos.html
+++ b/mis-datos.html
@@ -6,9 +6,8 @@
             rel="noopener noreferrer">
         <h4>Actualizar Información</h4>
         <p>
-          Si deseas actualizar tu información de ingreso podrás editar
-          todos los campos para datos personales, dirección de entrega
-          y métodos de pago.
+		Puedes revisar y actualizar tu información personal, 
+		dirección de entrega, o acceder a tus datos.
         </p>
         <h5>
           Actualiza tus datos aquí
@@ -19,18 +18,18 @@
             rel="noopener noreferrer">
         <h4>Recuperar Contraseña</h4>
         <p>
-          En caso de pérdida y cambio de contraseña podrás establecer
-          nuevamente un alternativa segura y confiable para igresar
+        Puedes recuperar tu contraseña solo con tu RUT, recuerda 
+		que también puedes comprar como usuario invitado.
         </p>
         <h5>
-          recupera tu contraseña aquí<span class="icon-arrow-right" />
+          Recupera tu contraseña aquí<span class="icon-arrow-right" />
         </h5>
       </a>
       <a class="item internal-link" href="/sac/preguntas-frecuentes/mis-datos/por-que-debo-registrarme">
         <h4>Registrarme</h4>
         <p>
-          Crea tu cuenta en Paris.cl de este modo podrás acceder a
-          muchos beneficios y ofertas que paris.cl tiene para ti..
+		Crea tu cuenta en Paris.cl de este modo podrás acceder a 
+		muchos beneficios y ofertas que paris.cl tiene para ti.
         </p>
         <h5>
           Regístrate aquí<span class="icon-arrow-right" />
@@ -44,69 +43,46 @@
     <h3>Preguntas Frecuentes</h3>
     <div class="flex-container flex-start">
       <div class="tab">
-        <button class="tablinks active">
-          ¿Cómo uso mis puntos?
-        </button>
-        <button class="tablinks">Comprar con Gift Card</button>
-        <button class="tablinks">
-          ¿Dónde solicitar mi Tarjeta?
-        </button>
+        <button class="tablinks active">No Recuerdo mi contraseña </button>
+        <button class="tablinks">No me llega el correo para recuperar mi contraseña</button>
+        <button class="tablinks">¿Como me registro en el sitio?</button>
       </div>
       <div class="tabcontent-container">
         <div class="tabcontent visible">
-          <button class="accordion">
-            ¿Cómo uso mis puntos?<span class="icon-plus" />
+          <button class="accordion"> No Recuerdo mi contraseña<span class="icon-plus" />
           </button>
           <div class="tabcontent__expadning-container">
-            <h4>Usando tus puntos!</h4>
+            <h4>Recupera tu contraseña</h4>
             <p>
-              Si tu producto está en perfecto estado, tienes 30 días
-              para cambiarlo desde la fecha de compra o recepción del
-              producto. Sólo debes presentar tu producto, con la
-              boleta o ticket de cambio, en cualquier tienda Paris. En
-              el caso de productos de mayor tamaño y difícil traslado,
-              contamos con retiro a domicilio llamando al 600 400
-              8000, costeando el valor del transporte.
-            </p>
-            <h4>Compra lo que quieras!</h4>
-            <p>
-              ¡No te preocupes! Si tu producto está en perfecto estado
-              tienes 10 días para anular tu compra. Sólo debes
-              presentar tu producto con la boleta, en cualquier tienda
-              Paris. En el caso de productos de difícil traslado te
-              ofrecemos el retiro a domicilio llamando al 600 400 8000
-              sólo costeando el valor del transporte.
-            </p>
-            <h4>Acumula puntos</h4>
-            <p>
-              Para productos de vestuario, tienes 3 meses para traerlo
-              a nuestras tiendas y realizar cambio o anulación, en
-              caso de falla.
+			Si no recuerdas tu contraseña, haz click en el siguiente link
+			<a href="https://www.paris.cl/webapp/wcs/stores/servlet/ResetPasswordGuestErrorView?state=forgetpassword&amp;catalogId=40000000629&amp;langId=-5&amp;storeId=10801" target="_blank"><strong>Recuperar Contraseña</strong></a> 
+			ingresa tu RUT y en unos segundos recibirás un mensaje al correo electrónico que registraste con una clave 
+			provisoria que podrás modificar posteriormente en tus datos de cuenta.
             </p>
           </div>
         </div>
         <div class="tabcontent">
           <button class="accordion">
-            Comprar con Gift Card<span class="icon-plus" />
+            No me llega el correo para recuperar mi contraseña<span class="icon-plus" />
           </button>
           <div class="tabcontent__expadning-container">
-            <h4>Comprar con Gift Card</h4>
+            <h4>No me llega el correo para recuperar mi contraseña</h4>
             <p>
-              Puedes comprar con tus Tarjetas Gift Card de la forma mas
-              segura...
+			Es posible que dentro de tu correo electrónico el mensaje haya caído en alguna 
+			carpeta de SPAM o que el correo que registraste no sea el mismo al que intentas 
+			recuperar, si tienes problemas puedes llamarnos para poder ayudarte al 600 400 8000
             </p>
           </div>
         </div>
         <div class="tabcontent">
           <button class="accordion">
-            ¿Dónde solicitar mi Tarjeta?<span class="icon-plus" />
+            ¿Como me registro en el sitio?<span class="icon-plus" />
           </button>
           <div class="tabcontent__expadning-container">
-            <h4>¿Dónde solicitar mi Tarjeta?</h4>
+            <h4>¿Como me registro en el sitio?</h4>
             <p>
-              Tu Tarjeta Cencosud la puedes solicitar en cualquiera de
-              nuestras sucursales a lo largo de todo el país. Tambien
-              puedes solicitarla de forma gratuita a través de...
+			<p>Es muy simple, podrás comprar aun sin no estas registrado en nuestra página. Para registrarte en el sitio, 
+			hazlo aquí. <a href="https://www.paris.cl/webapp/wcs/stores/servlet/Logoff?new=Y&amp;catalogId=40000000629&amp;myAcctMain=1&amp;langId=-5&amp;storeId=10801" target="_blank">REGISTRO</a></p>
             </p>
           </div>
         </div>
