--- a/servicios.html
+++ b/servicios.html
@@ -14,11 +14,10 @@
           infórmate aquí<span class="icon-arrow-right" />
         </h5>
       </a>
-      <a class="item internal-link" href="/sac/contacto/tiendas">
+      <a class="item internal-link" href="https://boletaelectronicaparis.paperless.cl/parisweb/">
         <h4>Recuperar tu Boleta</h4>
         <p>
-          Ubica tu tienda favorita seleccionando la región en la que
-          quieres efectuar tu compra.
+          Si necesitas recuperar tu boleta, puedes realizarlo acá.
         </p>
         <h5>
           Recupera tu boleta aquí<span class="icon-arrow-right" />
@@ -55,30 +54,31 @@
     <h3>Preguntas Frecuentes</h3>
     <div class="flex-container flex-start">
       <div class="tab">
-        <button class="tablinks active">¿Cómo uso mis puntos?</button>
-        <button class="tablinks">Comprar con GiftCard</button>
+        <button class="tablinks active">¿Cómo puedo usar mis puntos?</button>
+        <button class="tablinks">Consulta tu Gift Card</button>
         <button class="tablinks">¿Dónde solicitar mi Tarjeta?</button>
       </div>
       <div class="tabcontent-container">
         <div class="tabcontent visible">
           <button class="accordion">
-            ¿Cómo uso mis puntos?<span class="icon-plus" />
+            ¿Cómo puedo usar mis puntos?<span class="icon-plus" />
           </button>
           <div class="tabcontent__expadning-container">
-            <h4>¿Cómo uso mis puntos?</h4>
+            <h4>¿Cómo puedo usar mis puntos?</h4>
             <p>
-              En Paris.cl puedes obtener tus productos por medio de
-              despacho a domicilio o retiro en tienda.
+			Puedes canjear tus puntos acumulados desde las tiendas o directo desde la web de puntos Cencosud.
+			En tiendas, desde 5.000.- puntos puedes canjear directo en las cajas.
+			Desde la Web, desde 1000.- puntos ya puedes canjear
             </p>
           </div>
         </div>
         <div class="tabcontent">
           <button class="accordion">
-            Comprar con GiftCard<span class="icon-plus" />
+            Consulta tu Gift Card<span class="icon-plus" />
           </button>
           <div class="tabcontent__expadning-container">
-            <h4>Comprar con GiftCard</h4>
-            <p>Retira en Tienda de forma segura...</p>
+            <h4>Consulta tu Gift Card</h4>
+            <p>Puedes revisar el estado de tu Gift Card o el monto disponible, solo debes hacer <a href="http://ve.giftcard.cl/consulta/consultaTarjeta.do" target="_blank">click acá</a>.</p>
           </div>
         </div>
         <div class="tabcontent">
@@ -88,8 +88,8 @@
           <div class="tabcontent__expadning-container">
             <h4>¿Dónde solicitar mi Tarjeta?</h4>
             <p>
-              Toda compra realizada en Paris.cl posee un costo
-              asociado
+			Acércate a cualquiera de los Espacios Financieros en Tiendas Cencosud (Paris, Jumbo, Easy, Johnson y Santa Isabel) 
+			para obtener tu Tarjeta Scotiabank Cencosud MasterCard, Tarjeta Scotiabank Cencosud Visa o Tarjeta Scotiabank Cencosud.
             </p>
           </div>
         </div>
