--- a/informacion/preguntas-frecuentes.html
+++ b/informacion/preguntas-frecuentes.html
@@ -16,9 +16,10 @@
           </button>
           <div class="tabcontent__expadning-container">
             <p>
-              Haz click en el siguiente link
-              <a href="CONTRASEÑA OLVIDADA" target="_blank" rel="noopener noreferrer">CONTRASEÑA OLVIDADA</a> ingresa tu RUT y en unos segundos recibirás un mensaje al correo electrónico que registraste con una clave provisoria que podrás modificar posteriormente
-              en tus datos de cuenta.
+			Haz click en la siguiente opción
+			<a href="https://www.paris.cl/webapp/wcs/stores/servlet/ResetPasswordGuestErrorView?state=forgetpassword&amp;catalogId=40000000629&amp;langId=-5&amp;storeId=10801" target="_blank"><strong>[Recuperar Contraseña]</strong></a> 
+			ingresa tu RUT y en unos segundos recibirás un mensaje al correo electrónico que registraste con una clave 
+			provisoria que podrás modificar posteriormente en tus datos de cuenta.
             </p>
           </div>
 
@@ -26,9 +27,11 @@
             No me llega el correo para recuperar mi contraseña<span class="icon-plus" />
           </button>
           <div class="tabcontent__expadning-container">
-            <p>
-              Es posible que dentro de tu correo electrónico el mensaje haya caído en alguna carpeta de SPAM o que el correo que registraste no sea el mismo al que intentas recuperar, si tienes problemas puedes llamarnos para poder ayudarte al <a href="">600 400 8000.</a>
-            </p>
+			<p>
+			Primero revisa todas las carpetas de tu correo electrónico, es posible que el mensaje haya caído en alguna 
+			carpeta de SPAM, si no recuerdas el correo registrado o ahora es otro, 
+			<a href="/sac/contacto/formulario-contacto">contáctanos</a> para ayudarte. <strong>(Recuerda que siempre puedes comprar como usuario invitado)</strong>
+			</p>
           </div>
 
           <button class="accordion">
@@ -36,10 +39,9 @@
             o no esta activo?<span class="icon-plus" />
           </button>
           <div class="tabcontent__expadning-container">
-            <p>
-              Puedes comunicarte con nuestro servicio al cliente
-              <a href="tel:6004008000">600 400 8000</a>, de todas formas si necesitas comprar no necesitas estar registrado, lo puedes hacer también como usuario invitado.
-            </p>
+            <p>Para actualizar tus datos de cuenta, <a href="/sac/contacto/formulario-contacto"><strong>contáctanos</strong></a> para ayudarte, 
+			de todas formas si necesitas comprar no necesitas estar registrado, 
+			lo puedes hacer también como usuario invitado.</p>
           </div>
 
           <button class="accordion">
@@ -47,7 +49,7 @@
           </button>
           <div class="tabcontent__expadning-container">
             <p>
-              Es muy simple, podrás comprar aun sin no estas registrado en nuestra página. Para registrarte en el sitio, hazlo aquí. <a href="#" class="red">REGISTRO</a>
+            Es sencillo! Ve a Inicio de Sesión / Regístrate y completa los datos solicitados, de todas formas si necesitas comprar no necesitas estar registrado, lo puedes hacer también como usuario invitado.
             </p>
           </div>
 
@@ -56,7 +58,7 @@
           </button>
           <div class="tabcontent__expadning-container">
             <p>
-              Tendrás guardado el historial de tus compras, podrás guardar tus tarjetas para que tu compra sea mas rápida, además de guardar tus direcciones de despacho.
+              Tendrás guardado el historial de tus compras, podrás guardar tus tarjetas para que tu compra sea mas rápida, además de guardar tus direcciones de despacho Y Revisar el seguimiento de tu compra.
             </p>
           </div>
 
@@ -104,8 +106,8 @@
             </p>
             <ul>
               <li>
-                Regístrate en Paris.cl. Si aún no estás inscrito,
-                <a href="#" class="red">hazlo aquí</a>
+                Regístrate en nuestro sitio, si aún no estás inscrito,
+                <a href="https://www.paris.cl/webapp/wcs/stores/servlet/Logoff?new=Y&catalogId=40000000629&myAcctMain=1&langId=-5&storeId=10801"><strong>hazlo aquí</strong></a>
               </li>
               <li>
                 Agrega el producto a tu carro. Aquí podrás ver el listado de los productos que has elegido, actualizar las cantidades o sacarlos.
@@ -138,7 +140,7 @@
           </div>
 
           <button class="accordion">
-            ¿Cuál es la disponibilidad de productos?<span class="icon-plus" />
+            ¿Cómo establezco las cantidades del producto que quiero?<span class="icon-plus" />
           </button>
           <div class="tabcontent__expadning-container">
             <p>
@@ -147,12 +149,12 @@
           </div>
 
           <button class="accordion">
-            ¿Como funciona la carro de compra?<span class="icon-plus" />
+            ¿Como funciona el Carro de Compras?<span class="icon-plus" />
           </button>
           <div class="tabcontent__expadning-container">
             <p>
-              En el Carro de Compra almacenas todos los productos que deseas comprar, cada vez que elijas un producto y lo agregues a la Barro de Compras, el sistema registrará la cantidad y el artículo. A la hora de cancelar, podrás escoger si deseas actualizar las
-              cantidades o sacar productos del carro de compra para finalmente enviar la orden de compra.
+              En el carro de compra almacenas todos los productos que deseas comprar, cada vez que elijas un producto y lo agregues a la carro de compras el sistema registrará la cantidad y el artículo. A la hora de cancelar, podrás escoger si deseas actualizar las
+              cantidades o sacar productos del carro de compra para finalmente, pasar a finalizar tu compra.
             </p>
           </div>
 
@@ -160,8 +162,9 @@
             ¿Puedo pedir factura?<span class="icon-plus" />
           </button>
           <div class="tabcontent__expadning-container">
-            <p>
-              Sí, durante el proceso de compra podrás seleccionar la opción Factura. La factura es Electrónica, esta será enviada al correo electrónico que indiques en la Orden de Compra.
+			<p>Sí, durante el proceso de compra podrás seleccionar la opción Factura.
+			La factura es Electrónica, esta será enviada al correo electrónico que indiques en la Orden de Compra. 
+			<strong> Es importante que ingreses los datos correctamente ya que no podemos hacer modificaciones, tanto de la información registrada como del tipo documento (cambiar de boleta a factura o viceversa)</strong>
               <span class="nota">
                 Nota: Esta opción no está disponible para productos de
                 regalos de Novios o Bebés o pagando con Giftcard.
@@ -174,15 +177,15 @@
           </button>
           <div class="tabcontent__expadning-container">
             <p>
-              Si haz generado dos Órdenes de Compra y necesitas anular una de ellas comunícate con nuestro Servicio al Cliente.
+              Si haz generado <strong>dos</strong> Órdenes de Compra y necesitas anular <strong>una</strong> de ellas comunícate con nuestro Servicio al Cliente.
             </p>
 
             <p>
-              Si realizaste una Orden de Compra y se duplicó el cobro de tu compra deberás llamar a nuestro Servicio al Cliente.
+              Si realizaste <strong>una</strong> Orden de Compra y se duplicó el cobro de tu compra llama a nuestro Servicio al Cliente.
             </p>
 
             <p>
-              Si tu solicitud de compra no finalizó pero igual generó un cobro, en 48 hrs., el cargo será reversado por la entidad bancaria, si esto no es efectivo, comunícate con Servicio al Cliente.
+              Si tu solicitud de compra no finalizó pero igual generó un cobro, en <strong>48 hrs, el cargo será reversado por la entidad bancaria,</strong> si esto no es efectivo, comunícate con Servicio al Cliente.
             </p>
           </div>
 
@@ -203,22 +206,16 @@
             cliente?<span class="icon-plus" />
           </button>
           <div class="tabcontent__expadning-container">
-            <p>
-              El horario de atención es de 09:00 a 22:00 hrs de Lunes a Domingo.
-            </p>
-            <p>
-              El horario de atención de nuestro Call Center es de 08:00 a 21:00 hrs de lunes a domingo.
-            </p>
+			<p>El horario de atención de <strong>venta teléfonica</strong> es de 09:00 a 22:00 hrs de Lunes a Domingo.</p>
+			<p>El horario de atención de <strong>nuestro Call Center</strong> es de 08:00 a 21:00 hrs de Lunes a Domingo.</p>
           </div>
 
           <button class="accordion">
             ¿Puedo realizar compras desde el extranjero?<span class="icon-plus" />
           </button>
           <div class="tabcontent__expadning-container">
-            <p>
-              Podrás realizar tus compras desde el extranjero para despachar dentro de Chile marcando el teléfono
-              <a href="">(562) 8623351</a> y pagando con Mastercard, Visa, American Express o Diners Club emitidas en Chile.
-            </p>
+			<p>Podrás realizar tus compras desde el extranjero para despachar dentro de Chile marcando el teléfono <a href="tel:6004006400">600 400 6400</a> y 
+			pagando con Mastercard, Visa, American Express o Diners Club emitidas en Chile.</p>
           </div>
         </div>
         <div class="tabcontent">
@@ -227,10 +224,8 @@
             ¿Como puedo revisar el seguimiento de mis productos?<span class="icon-plus" />
           </button>
           <div class="tabcontent__expadning-container">
-            <p>
-              Si necesitas conocer el estado de tu despacho o necesitas conocer el seguimiento de tu orden puede hacer click en el siguiente enlace
-              <a href="#" class="red">Seguimiento de tu Orden</a>
-            </p>
+			<p>Para revisar los avances de tu orden y conocer el estado de tu despacho ingresa al siguiente 
+			enlace <a href="https://www.paris.cl/webapp/wcs/stores/servlet/AjaxTrackingOrderDetailView?catalogId=40000000629&amp;tab=tienda&amp;fromHeader=true&amp;langId=-5&amp;storeId=10801" target="_blank">Seguimiento de tu Orden</a></p>
           </div>
 
           <button class="accordion">
@@ -240,6 +235,106 @@
             <p>
               Los productos pueden ser despachados de Lunes a Sábado a partir de las 09 hrs y hasta las 21 hrs
             </p>
+			<div class="panel" style="display: block;">
+						<p>Los productos pueden ser despachados de Lunes a Sábado a partir de las 09 hrs y hasta las 21 hrs</p>
+						<div class="table-responsive">
+								<table class="table-data" width="100%" border="0" cellspacing="0" cellpadding="5">
+									<thead>
+										<tr>
+										<th>Región
+										</th><th>Tarifas Sector Urbano<br>Plazo Máx. Entrega<br>(días hábiles)
+										</th><th>Tarifas Sector Rural 1<br>Plazo Máx. Entrega<br>(días hábiles)
+										</th><th>Tarifas Sector Rural 2<br>Plazo Máx. Entrega<br>(días hábiles)
+									</th></tr>
+									</thead>
+									<tbody>
+									<tr>
+										<td>I</td>
+										<td>6 días</td>
+										<td>9 días</td>
+										<td>9 días</td>
+									</tr>
+									<tr>
+										<td>II</td>
+										<td>6 días</td>
+										<td>9 días</td>
+										<td>9 días</td>
+									</tr>
+									<tr>
+										<td>III</td>
+										<td>6 días</td>
+										<td>7 días</td>
+										<td>9 días</td>
+									</tr>
+									<tr>
+										<td>IV</td>
+										<td>3 días</td>
+										<td>6 días</td>
+										<td>8 días</td>
+									</tr>
+									<tr>
+										<td>V</td>
+										<td>3 días</td>
+										<td>4 días</td>
+										<td>6 días</td>
+									</tr>
+									<tr>
+										<td>VI</td>
+										<td>3 días</td>
+										<td>6 días</td>
+										<td>8 días</td>
+									</tr>
+									<tr>
+										<td>VII</td>
+										<td>3 días</td>
+										<td>6 días</td>
+										<td>8 días</td>
+									</tr>
+									<tr>
+										<td>VIII</td>
+										<td>4 días</td>
+										<td>7 días</td>
+										<td>10 días</td>
+									</tr>
+									<tr>
+										<td>IX</td>
+										<td>4 días</td>
+										<td>6 días</td>
+										<td>8 días</td>
+									</tr>
+									<tr>
+										<td>X</td>
+										<td>6 días</td>
+										<td>8 días</td>
+										<td>9 días</td>
+									</tr>
+									<tr>
+										<td>XIV</td>
+										<td>6 días</td>
+										<td>6 días</td>
+										<td>9 días</td>
+									</tr>
+									<tr>
+										<td>XV</td>
+										<td>6 días</td>
+										<td>9 días</td>
+										<td>9 días</td>
+									</tr>
+									<tr>
+										<td>RM</td>
+										<td>1 días</td>
+										<td>3 días</td>
+										<td>5 días</td>
+									</tr>
+									<tr>
+										<td>Chiloé</td>
+										<td>6 días</td>
+										<td>8 días</td>
+										<td>12 días</td>
+									</tr>
+								</tbody></table>
+							</div>
+					</div>
           </div>
 
           <button class="accordion">
@@ -259,6 +354,53 @@
             <p>
               Queremos lo mejor para ti y por eso te ofrecemos una variedad de despachos para que puedas contemplar el que más se acomoda a tu disponibilidad.
             </p>
+			<div class="table-responsive">
+								<table width="100%" class="table-data">
+										<thead>
+											<tr>
+												<th style="width: 17%;">Tipo de Despacho</th>
+												<th style="width: 15%;">Si compras hoy</th>
+												<th style="width: 25%;">Fecha de entrega</th>
+												<th style="width: 25%;">Hora de entrega</th>
+												<th>Válido en</th>
+												</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td>Despacho Programado</td>
+												<td>Todo Horario</td>
+												<td colspan="2">Tú decides la fecha y hora en que se despacha comenzando desde las 15:00 horas del día posterior a la compra.</td>
+												<td>RM Urbana</td>
+											</tr>
+											<tr>
+												<td>Despacho Normal</td>
+												<td>Todo Horario</td>
+												<td colspan="2">Dependiendo de la región a la cual estés enviando tu pedido, este será despachado entre 3 y 16 días hábiles posteriores a la confirmación de tu orden de compra.</td>
+												<td>
+													RM Urbanas<br>
+													RM Rural 1<br>
+													RM Rural 2<br>
+													Regiones Urbanas<br>
+													Región Rural 1<br>
+													Región Rural 2
+												</td>
+											</tr>
+											<tr>
+												<td>Entrega el proveedor</td>
+												<td>Todo Horario</td>
+												<td colspan="2">Los despachos del proveedor pueden requerir de hasta 10 días hábiles adicionales para hacer efectiva la entrega. Los días hábiles adicionales se informan en la ficha de cada producto.</td>
+												<td>
+													RM Urbana<br>
+													RM Rural 1<br>
+													RM Rural 2<br>
+													Regiones Urbanas<br>
+													Región Rural 1<br>
+													Región Rural 2
+												</td>
+											</tr>
+										</tbody>
+									</table>
+						</div>
           </div>
 
           <button class="accordion">
@@ -278,6 +420,28 @@
               <li>Tiendas exclusivas.</li>
               <li>Sujeto a disponibilidad.</li>
             </ul>
+			<div class="table-responsive">
+							<table class="table-data">
+									<thead>
+										<tr>
+											<th style="width: 50%;">Tamaño</th>
+											<th>Volumen</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>Producto Pequeño</td>
+											<td>Inferior a 40 x 40 x 40 cms.</td>
+										</tr>
+										<tr>
+											<td>Producto Grande</td>
+											<td>Superior a 40 x 40 x 40 cms.</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+			<p>Recuerda que cada 14 productos "Tamaño Pequeño" el costo de tu despacho será equivalente a comprar sólo un producto pequeño.</p>
+			
           </div>
 
           <button class="accordion">
