--- a/informacion/preguntas-frecuentes.html
+++ b/informacion/preguntas-frecuentes.html
@@ -30,7 +30,7 @@
 			<p>
 			Primero revisa todas las carpetas de tu correo electrónico, es posible que el mensaje haya caído en alguna 
 			carpeta de SPAM, si no recuerdas el correo registrado o ahora es otro, 
-			<a href="/sac/contacto/formulario-contacto">contáctanos</a> para ayudarte. <strong>(Recuerda que siempre puedes comprar como usuario invitado)</strong>
+			<a href="/ayuda-paris/contacto_full_page">contáctanos</a> para ayudarte. <strong>(Recuerda que siempre puedes comprar como usuario invitado)</strong>
 			</p>
           </div>
 
@@ -39,7 +39,7 @@
             o no esta activo?<span class="icon-plus" />
           </button>
           <div class="tabcontent__expadning-container">
-            <p>Para actualizar tus datos de cuenta, <a href="/sac/contacto/formulario-contacto"><strong>contáctanos</strong></a> para ayudarte, 
+            <p>Para actualizar tus datos de cuenta, <a href="/ayuda-paris/contacto_full_page"><strong>contáctanos</strong></a> para ayudarte, 
 			de todas formas si necesitas comprar no necesitas estar registrado, 
 			lo puedes hacer también como usuario invitado.</p>
           </div>
@@ -532,8 +532,9 @@
           </button>
           <div class="tabcontent__expadning-container">
             <p>
-              Si necesitas realizar una devolución puedes realizarlo directo en la tienda mas cercana, si es un producto de gran tamaño y requieres que sea retirado a tu domicilio llamanos al <a href="tel:6004008000">600 400 8000</a>, para mayor información
-              haz click acá <a href="">DEVOLUCIONES</a>
+			Si necesitas realizar una devolución puedes realizarlo directo en la tienda mas cercana, 
+			si es un producto de gran tamaño y requieres que sea retirado a tu domicilio llamanos al <a href="tel:6004008000">600 400 8000</a>, 
+			para mayor información haz click <a href="/despacho-reagenda-o-anula-tu-compra">acá</a></p>
             </p>
           </div>
 
@@ -541,12 +542,8 @@
             El producto que recibí no es el que compre<span class="icon-plus" />
           </button>
           <div class="tabcontent__expadning-container">
-            <p>
-              Si tienes problemas con tu compra, escríbenos en el siguiente link
-              <a href="/sac/contacto/formulario-contacto" className="internal-link">
-                FORMULARIO
-              </a> y nos pondremos en contacto contigo, si necesitas mayor información puedes comunicarte con nosotros al
-              <a href="tel:6004008000">600 400 8000</a>
+			<p>
+			Si tienes problemas con tu compra, escríbenos en la siguiente opción <a href="/ayuda-paris/contacto/formulario-contacto">[contáctanos]</a> y nos pondremos en contacto contigo	
             </p>
           </div>
 
