--- a/informacion/preguntas-frecuentes.html
+++ b/informacion/preguntas-frecuentes.html
@@ -451,7 +451,7 @@
           <div class="tabcontent__expadning-container">
             <p>
               Revisa el estado de tu despacho en la opción de seguimiento de tu compra, o puedes completar una solicitud de reagendamiento en el siguiente vínculo
-              <a href="/sac/despacho/reagenda-o-anula-tu-compra" class="internal-link">REAGENDAR</a>, si necesitas mayor información puedes comunicarte con nosotros al
+              <a href="/ayuda-paris/despacho/reagenda-o-anula-tu-compra" class="internal-link">REAGENDAR</a>, si necesitas mayor información puedes comunicarte con nosotros al
               <a href="tel:6004008000">600 400 8000</a>
             </p>
           </div>
@@ -511,7 +511,7 @@
           <div class="tabcontent__expadning-container">
             <p>
               Si necesitas tener información de la tienda y horarios de atención haz click en el siguiente link
-              <a href="/sac/contacto/tiendas" class="internal-link">Informacion de tiendas</a>
+              <a href="/ayuda-paris/contacto/tiendas" class="internal-link">Informacion de tiendas</a>
             </p>
           </div>
 
