--- a/contacto.html
+++ b/contacto.html
@@ -15,19 +15,12 @@
           ingresa al Formulario aquí<span class="icon-arrow-right" />
         </h5>
       </a>
-      <a class="item internal-link red">
+      <a class="item">
         <h4>Redes Sociales</h4>
         <p>
 		Conoce e interactúa con nosotros en nuestras RR.SS.
         </p>
-		<h5>
-		<a class="social-link icon-facebook" title="Facebook link" href="https://www.facebook.com/TiendasParis" target="_blank" rel="nofollow noopener"></a>
-    
-		<a class="social-link icon-twitter" title="Twitter link" href="https://twitter.com/tiendas_paris" target="_blank" rel="nofollow noopener"></a>
-    
-		<a class="social-link icon-instgram" title="Instgram link" href="https://instagram.com/tiendas_paris/" target="_blank" rel="nofollow noopener"></a>
-		</h5>
-      </a>
+		</a>
       <a class="item" href="https://m.me/TiendasParis" target="_blank"
             rel="noopener noreferrer">
         <h4>Chat online</h4>
@@ -59,10 +52,9 @@
           </button>
           <div class="tabcontent__expadning-container">
             <h4>¿Cuál es el horario de Venta telefónica y servicio al cliente?</h4>
-            <p>
-			El horario de atención de venta telefónica es de 09:00 a 22:00 hrs de Lunes a Domingo.
+            <p>	El horario de atención de venta telefónica es de 09:00 a 22:00 hrs de Lunes a Domingo.</p>
 			<br>
-			El horario de atención de nuestro Call Center es de 08:00 a 21:00 hrs de lunes a domingo.
+			<p>El horario de atención de nuestro Call Center es de 08:00 a 21:00 hrs de Lunes a Domingo.</p>
             </p>
           </div>
         </div>
